--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,10 +5,20 @@
 .collapse {
   justify-content: center;
   font-size: 20px;
+  background: var(--primary-color);
 }
 
 a {
   text-decoration: none;
   color: black;
   padding: 20px;
+}
+
+.logo {
+  width: 25px;
+}
+
+#icon {
+  width: 25px;
+  cursor: pointer;
 }
